--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Burger</title>
 </head>
 <body>
-    <h1>Burger</h1>
-    <img src="../burger.jpg" alt="Burger">
+    <h1 class="title">How To Make A Juicy Burger From Scratch</h1>
+    <img src="../images/burger.jpg" alt="Burger">
 
     <h3>How to make a Burger</h3>
     <p>
