--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Burrito</title>
 </head>
 <body>
-    <h1>Burrito</h1>
-    <img src="../burrito.jpg" alt="Burrito">
+    <h1 class="title">How To Make A Delightful Burrito From Scratch</h1>
+    <img src="../images/burrito.jpg" alt="Burrito">
 
     <h3>How to make a Burrito</h3>
     <p>
