--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../lasagna.jpg" alt="Lasagna">
+    <h1 class="title">How To Make A Crisby Lasagna From Scratch</h1>
+    <img src="../images/lasagna.jpg" alt="Lasagna">
 
     <h3>How to make a Lasagna</h3>
     <p>
