Styled all the recipe pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="container header-container">
         <nav class="nav">
             <div class="nav-logo">
-                <h2><span class="logo">O</span>din-<span class="logo">R</span>ecipes</h2>
+                <a href="index.html"><h2><span class="logo">O</span>din-<span class="logo">R</span>ecipes</h2></a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="#">Link One</a></li>
