--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -7,40 +7,62 @@
     <title>Burrito</title>
 </head>
 <body>
-    <h1 class="title">How To Make A Delightful Burrito From Scratch</h1>
-    <img src="../images/burrito.jpg" alt="Burrito">
+    <header class="container header-container">
+        <nav class="nav">
+            <div class="nav-logo">
+                <a href="../index.html"><h2><span class="logo">O</span>din-<span class="logo">R</span>ecipes</h2></a>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-menu-item"><a href="#">Link One</a></li>
+                <li class="nav-menu-item"><a href="#">Link Two</a></li>
+                <li class="nav-menu-item"><a href="#">Link Three</a></li>
+                <li class="nav-menu-item"><a href="#">Link Four</a></li>
+                <li class="nav-menu-item"><a href="#">Link Five</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h3>How to make a Burrito</h3>
-    <p>
-        These beef burritos contain various peppers and seasonings on top of refried beans. 
-        Top them off with lettuce, sour cream, cheese, and wrap up in a soft shell.
-    </p>
+    <main class="container">
+        <div class="recipe">
+            <h1 class="recipe-title">How To Make A Delightful Burrito From Scratch</h1>
+            <img class="recipe-banner" src="../images/burrito.jpg" alt="Burrito">
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>6 ounces sliced jalapeno peppers</li>
-        <li>1 tomato, diced</li>
-        <li>1 (4 ounce) can chopped green chile peppers</li>
-        <li>1 green bell pepper, diced</li>
-        <li>1 red bell pepper, diced</li>
-        <li>1 onion, diced</li>
-        <li>1 ½ tablespoons hot sauce</li>
-        <li>¼ teaspoon ground cayenne pepper</li>
-        <li>1 pound ground beef</li>
-        <li>1 (1 ounce) package burrito seasoning</li>
-        <li>1 (14 ounce) can refried beans</li>
-        <li>6 (10 inch) flour tortillas</li>
-        <li>1 (10 ounce) bag shredded lettuce</li>
-        <li>1 (8 ounce) container sour cream</li>
-        <li>1 (8 ounce) package shredded sharp Cheddar cheese</li>
-    </ul>
+            <p>
+                These beef burritos contain various peppers and seasonings on top of refried beans. 
+                Top them off with lettuce, sour cream, cheese, and wrap up in a soft shell.
+            </p> <br>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Mix jalapeno peppers, tomato, green chile peppers, green bell pepper, red bell pepper, onion, hot sauce, and cayenne pepper together in a large bowl.</li>
-        <li>Cook beef in a large skillet over medium-high heat, stirring to break up clumps, about 5 minutes. Drain excess grease. Add jalapeno pepper mixture and burrito seasoning; cook, covered, stirring occasionally, until flavors combine, about 10 minutes.</li>
-        <li>Pour refried beans into a saucepan over medium-low heat. Cook and stir until heated through, about 5 minutes.</li>
-        <li>Warm each tortilla in the microwave until soft, 15 to 20 seconds. Spread a layer of refried beans on top. Divide beef mixture among tortillas. Top with lettuce, sour cream, and Cheddar cheese. Fold in opposing edges of each tortilla and roll up into a burrito.</li>
-    </ol>
+            <div class="ingredients">
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>6 ounces sliced jalapeno peppers</li>
+                    <li>1 tomato, diced</li>
+                    <li>1 (4 ounce) can chopped green chile peppers</li>
+                    <li>1 green bell pepper, diced</li>
+                    <li>1 red bell pepper, diced</li>
+                    <li>1 onion, diced</li>
+                    <li>1 ½ tablespoons hot sauce</li>
+                    <li>¼ teaspoon ground cayenne pepper</li>
+                    <li>1 pound ground beef</li>
+                    <li>1 (1 ounce) package burrito seasoning</li>
+                    <li>1 (14 ounce) can refried beans</li>
+                    <li>6 (10 inch) flour tortillas</li>
+                    <li>1 (10 ounce) bag shredded lettuce</li>
+                    <li>1 (8 ounce) container sour cream</li>
+                    <li>1 (8 ounce) package shredded sharp Cheddar cheese</li>
+                </ul>
+            </div>
+
+            <div class="steps">
+                <h3>Steps</h3>
+                <ol>
+                    <li>Mix jalapeno peppers, tomato, green chile peppers, green bell pepper, red bell pepper, onion, hot sauce, and cayenne pepper together in a large bowl.</li>
+                    <li>Cook beef in a large skillet over medium-high heat, stirring to break up clumps, about 5 minutes. Drain excess grease. Add jalapeno pepper mixture and burrito seasoning; cook, covered, stirring occasionally, until flavors combine, about 10 minutes.</li>
+                    <li>Pour refried beans into a saucepan over medium-low heat. Cook and stir until heated through, about 5 minutes.</li>
+                    <li>Warm each tortilla in the microwave until soft, 15 to 20 seconds. Spread a layer of refried beans on top. Divide beef mixture among tortillas. Top with lettuce, sour cream, and Cheddar cheese. Fold in opposing edges of each tortilla and roll up into a burrito.</li>
+                </ol>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
