--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,38 +7,61 @@
     <title>Burger</title>
 </head>
 <body>
-    <h1 class="title">How To Make A Juicy Burger From Scratch</h1>
-    <img src="../images/burger.jpg" alt="Burger">
+    <header class="container header-container">
+        <nav class="nav">
+            <div class="nav-logo">
+                <a href="../index.html"><h2><span class="logo">O</span>din-<span class="logo">R</span>ecipes</h2></a>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-menu-item"><a href="#">Link One</a></li>
+                <li class="nav-menu-item"><a href="#">Link Two</a></li>
+                <li class="nav-menu-item"><a href="#">Link Three</a></li>
+                <li class="nav-menu-item"><a href="#">Link Four</a></li>
+                <li class="nav-menu-item"><a href="#">Link Five</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h3>How to make a Burger</h3>
-    <p>
-        These burger patties are made with ground beef and an easy bread crumb mixture. 
-        Nothing beats a simple hamburger on a warm summer evening. 
-        Pile these burgers with your favorite condiments and pop open a cool drink!
-    </p>
-    <p>
-        Need a basic burger recipe that you can whip up in no time? We have the perfect one. 
-        With just 5 ingredients and 15 minutes of cooking time, this flavorful recipe is ready to be shared, topped, and sauced in any way you like! 
-        Learn how to make your own sizzling beef burger patties right here.
-    </p>
+    <main class="container">
+        <div class="recipe">
+            <h1 class="recipe-title">How To Make A Juicy Burger From Scratch</h1>
+            <img class="recipe-banner" src="../images/burger.jpg" alt="Burger">
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 large egg</li>
-        <li>½ teaspoon salt</li>
-        <li>½ teaspoon ground black pepper</li>
-        <li>1 pound ground beef</li>
-        <li>½ cup fine dry bread crumbs</li>
-    </ul>
+            <p>
+                This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. 
+                A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. 
+                I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
+            </p> <br>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
-        <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
-        <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
-        <li>Form into four 3/4-inch-thick patties.</li>
-        <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
-        <li>Serve hot and enjoy!</li>
-    </ol>    
+            <p>
+                Homemade lasagna isn't as hard to make as it seems. 
+                Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!
+            </p> <br>
+
+            <div class="ingredients">
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>1 large egg</li>
+                    <li>½ teaspoon salt</li>
+                    <li>½ teaspoon ground black pepper</li>
+                    <li>1 pound ground beef</li>
+                    <li>½ cup fine dry bread crumbs</li>
+                </ul> <br>
+            </div>
+            
+            <div class="steps">
+                <h3>Steps</h3>
+                <ol>
+                    <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+                    <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
+                    <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
+                    <li>Form into four 3/4-inch-thick patties.</li>
+                    <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+                    <li>Serve hot and enjoy!</li>
+                </ol>  
+            </div>
+        </div>
+    </main>
+     
 </body>
 </html>
