--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,40 +7,64 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1 class="title">How To Make A Crisby Lasagna From Scratch</h1>
-    <img src="../images/lasagna.jpg" alt="Lasagna">
+    <header class="container header-container">
+        <nav class="nav">
+            <div class="nav-logo">
+                <a href="../index.html"><h2><span class="logo">O</span>din-<span class="logo">R</span>ecipes</h2></a>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-menu-item"><a href="#">Link One</a></li>
+                <li class="nav-menu-item"><a href="#">Link Two</a></li>
+                <li class="nav-menu-item"><a href="#">Link Three</a></li>
+                <li class="nav-menu-item"><a href="#">Link Four</a></li>
+                <li class="nav-menu-item"><a href="#">Link Five</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h3>How to make a Lasagna</h3>
-    <p>
-        This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. 
-        A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. 
-        I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
-    </p>
-    <p>
-        Homemade lasagna isn't as hard to make as it seems. 
-        Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!
-    </p>
+    <main class="container">
+        <div class="recipe">
+            <h1 class="recipe-title">How To Make A Crisby Lasagna From Scratch</h1>
+            <img class="recipe-banner" src="../images/lasagna.jpg" alt="Lasagna">
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Meat: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
-        <li>Onion: A diced onion is cooked until translucent with the ground meat.</li>
-        <li>Canned tomatoes: You'll need a can of tomato sauce and a can of crushed tomatoes.</li>
-        <li>Fresh herbs: For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li>
-        <li>Sugar: A dash of sugar balances out all of the acidity from the tomatoes.</li>
-        <li>Spices and seasonings: This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li>
-        <li>Noodles: Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li>
-        <li>Cheese: The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
-        <li>Eggs: Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
-    </ul>
+            <p>
+                This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. 
+                A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. 
+                I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
+            </p> <br>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Cook the meat: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
-        <li>Cook the noodles: Boil the lasagna noodles in lightly salted water until they're al dente.</li>
-        <li>Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-        <li>Assemble the lasagna: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
-        <li>Bake the lasagna: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
-    </ol>
+            <p>
+                Homemade lasagna isn't as hard to make as it seems. 
+                Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!
+            </p> <br>
+
+            <div class="ingredients">
+                <h3>Ingredients</h3> <br>
+                <ul>
+                    <li>Meat</li>
+                    <li>Onion</li>
+                    <li>Canned tomatoes</li>
+                    <li>Fresh herbs</li>
+                    <li>Sugar</li>
+                    <li>Spices and seasonings</li>
+                    <li>Noodles</li>
+                    <li>Cheese</li>
+                    <li>Eggs</li>
+                </ul> <br>
+            </div>
+            
+
+            <div class="steps">
+                <h3>Steps</h3>
+                <ol>
+                    <li>Cook the meat: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+                    <li>Cook the noodles: Boil the lasagna noodles in lightly salted water until they're al dente.</li>
+                    <li>Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+                    <li>Assemble the lasagna: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+                    <li>Bake the lasagna: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+                </ol>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
